# pipetasks

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.circleci/: config.yml
pipetasks/: pipeline.py
pipetasks/scraping/: pipeline.py
tests/: test_pipeline.py
tests/scraping/: conftest.py  test_pipeline.py  test_pipeline_integration.py
