[project]
name = "pipetasks"
version = "0.1.5"
description = "Utils to build pipelines"
authors = [
    {name = "Armando Ezequiel Puerta", email = "armando.ezequiel.puerta@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development"]
requires-python = ">=3.10.13"
dependencies = [
    "retrying>=1.4.2",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipetasks"]

[tool.pytest.ini_options]
markers = [
    "integration: tests using external resources (Chrome, etc)",
]
addopts = "-m 'not integration'"

#############################################
#                 RUFF
#############################################
[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = []

# Esto activa reglas equivalentes a flake8, isort, pyupgrade,
# bugs típicos y mejores prácticas.
lint.select = [
    "E",   # errores estilo
    "F",   # errores de flake8
    "I",   # orden de imports (isort)
    "B",   # bugbear
    "UP",  # pyupgrade
    "C4",  # comprehensions
    "W",   # warnings
]

lint.ignore = [
    "E203",  # compatibilidad con estilo Black
    "E501",
]

#############################################
#                 RUFF ISORT
#############################################
[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["core"]
force-single-line = false

#############################################
#                 RUFF FORMAT
#############################################
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

#############################################
#                COVERAGE
#############################################
[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "*/__init__.py"
]

[tool.coverage.report]
show_missing = true
skip_covered = false

#############################################
#                 MYPY
#############################################
[tool.mypy]
python_version = "3.10.13"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
